--- a/templates/count.html
+++ b/templates/count.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>there are {{ count }} words in your text</h1>
+    <a href="{% url 'home' %}">Start Again</a>
     <h1>Original:</h1>
     {{ fulltext }}
 
