--- a/templates/count.html
+++ b/templates/count.html
@@ -14,9 +14,7 @@
     <h1>Word count</h1>
     {% for word, counttotal in sortedwords %}
     
-    {{ word }}
-    <br />
-    {{counttotal}}
+    {{ word }} - {{ counttotal }}
     <br />
     
     {% endfor %}
