--- a/templates/about.html
+++ b/templates/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>About</h1>
-
+    <a href="{% url 'home' %}">Return Home</a>
     <p>Hello this About</p>
 </body>
 </html>
