--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Word Count</h1>
+    <a href="{% url 'about' %}">About</a>
     <form action="{% url 'count'%}">
         <textarea name="fulltext" id="" cols="40" rows="10"></textarea>
         <br />
